# Simulador-MIPS

./: .gitignore  CMakeLists.txt  control.cpp  control.h  isa.cpp  isa.h  main.cpp
include/: control.h  isa.h
src/: control.cpp  isa.cpp  main.cpp
tests/: catch.h  fdx_tests.cpp  memory_access_tests.cpp
